app/assets/stylesheets/custom.scss
@import 'base/_variables';
@import 'AdminLTE';

@mixin for-desktop {
    @media (min-width: 992px) and (min-height: 769px) {
        @content;
    }
}

.full-height {
    height: 'auto';
    @include for-desktop {
        height: calc(100vh - #{$diaper-navbar-height}px - #{$diaper-footer-height}px);
    }
}

#calendar {
    background-color: #ffffff;
    width: 100%
}

#csvImportModal .modal-header {
  flex-direction: row;
  justify-content: center;
  
  h2 {
    text-align: center;
  }
  .close {
    position: absolute;
    margin: 0 !important;
    top: -0.25rem;
    left: 0.5rem;
  }
}

#pick-ups-header {
    height: 'auto';
    @include for-desktop {
        height: 10%;
    }
}

#pick-ups-calendar {
    height: 'auto';
    @include for-desktop {
        height: 90%;
    }
}

.wrapper-form-feedback {
    @extend .dropdown-item;

    &:active {
        color: inherit;
        background-color: #f8f9fa;
    }
}

.login-page--user {
  background: linear-gradient(135deg, #3023AE, #C86DD7);
  background-attachment: fixed;
  flex-flow: wrap;
}

.login-page--consolidated {
  background: linear-gradient(315deg, #8BC6EC 0%, #9599E2 100%);
}

.login-page--partner {
  background-color: grey;
}

.login-page-test {
  background-image: image-url("test-only-background.jpg");
}

.modal-body-warning-text {
  color: #ee5034
}

.numeric {
  text-align: right;
}

.percent {
  text-align: right;
}

